修改数据源

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="点击"
-        android:gravity="center"
-        android:id="@+id/tv_btn"
-        />
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="点击"
+            android:gravity="center"
+            android:id="@+id/tv_btn"
+            />
 
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn2"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn3"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn4"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn5"
+            />
 
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="点击"
-        android:gravity="center"
-        android:id="@+id/tv_btn1"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
-    <TextView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="文案"
-        android:gravity="center"
-        />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn6"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn7"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="点击"
+            android:gravity="center"
+            android:id="@+id/tv_btn1"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn8"
+            />
+        <TextView
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="文案"
+            android:gravity="center"
+            android:id="@+id/tv_btn9"
+            />
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
