--- a/hook/src/main/res/layout/item_root_hintpopupwindow.xml
+++ b/hook/src/main/res/layout/item_root_hintpopupwindow.xml
@@ -2,6 +2,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_height="match_parent">
 
     <View
